--- a/pages/index.html
+++ b/pages/index.html
@@ -254,19 +254,16 @@
         </section>
 
         <!-- ================= History =============== -->
-        <section class="story-wrapper bg-[#D64545] text-white py-16 md:py-20 h-1070 max-w-1920 m-auto h-full">
-            <div class="max-w-1593 mx-auto px-4 md:px-8  py-100">
-                <div class="flex flex-col md:flex-row md:items-start md:justify-between mb-10 space-y-4 md:space-y-0">
+        <section class="history-main story-wrapper">
+            <div class="history-wrape">
+                <div class="history-top-content">
                     <div>
-                        <div class=" flex items-center gap-6 mb-[13px]">
+                        <div class="history-sub-title">
                             <img src="../assets/images/white-truck.svg" alt="Truck icon" />
-                            <span class="uppercase text-14">History</span>
+                            <span>History</span>
                         </div>
-                        <h2 class="text-44 md:text-44 font-extrabold mt-12">
-                            The Story Behind Growth
-                        </h2>
+                        <h2>The Story Behind Growth</h2>
                     </div>
-
                     <!-- Navigation Buttons -->
                     <div class="flex items-center gap-10 pr-118 pt-50">
                         <button class="!w-40 !h-40 !rounded-full  bg-white  flex items-center justify-center swiper-button-prev">
@@ -278,7 +275,7 @@
                         </button>
                     </div>
                 </div>
-                <div class="relative pt-60 swiper story-slider">
+                <div class="relative !pt-60 swiper story-slider">
                     <div class="swiper-wrapper">
                         <div class="row swiper-slide">
                             <div class="rounded-xl overflow-hidden h-[722px] w-1230 flex items-center justify-center ">
